--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "css-mqpacker": "7.0.0",
     "cssnano": "4.1.0",
     "del": "3.0.0",
-    "eslint": "5.5.0",
-    "exstatic": "github:hexrweb/exstatic",
+    "eslint": "5.6.0",
     "gulp": "3.9.1",
     "gulp-changed": "3.2.0",
     "gulp-concat": "2.6.1",
     "gulp-csscomb": "3.0.8",
-    "gulp-htmlmin": "4.0.0",
+    "gulp-htmlmin": "5.0.1",
     "gulp-if": "2.0.2",
     "gulp-live-server": "0.0.31",
     "gulp-order": "1.1.1",
@@ -33,7 +32,7 @@
     "gulp-watch": "^5.0.1",
     "gulp-zip": "4.2.0",
     "postcss-combine-duplicated-selectors": "6.0.2",
-    "postcss-custom-properties": "7.0.0",
+    "postcss-custom-properties": "8.0.0",
     "run-sequence": "2.2.1",
     "xo": "^0.23.0"
   },
@@ -47,5 +46,8 @@
         "as-needed"
       ]
     }
+  },
+  "dependencies": {
+    "exstatic": "github:hexrweb/exstatic"
   }
 }
