--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "aggie-first-robotics",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "description": "Aggie FIRST Robotics Site",
-  "main": "compil.ejs",
+  "main": "compile.js",
   "repository": "https://github.com/AggieFirstRobotics/site.git",
   "author": "Aggie FIRST Robotics",
   "license": "MIT",
@@ -13,18 +13,14 @@
     "css-mqpacker": "7.0.0",
     "cssnano": "4.1.0",
     "del": "3.0.0",
-    "eslint": "5.5.0",
-    "exstatic": "github:hexrweb/exstatic",
     "gulp": "3.9.1",
     "gulp-changed": "3.2.0",
     "gulp-concat": "2.6.1",
     "gulp-csscomb": "3.0.8",
-    "gulp-htmlmin": "4.0.0",
     "gulp-if": "2.0.2",
     "gulp-live-server": "0.0.31",
     "gulp-order": "1.1.1",
     "gulp-postcss": "8.0.0",
-    "gulp-replace": "1.0.0",
     "gulp-rev": "8.1.1",
     "gulp-sass": "4.0.1",
     "gulp-sourcemaps": "2.6.4",
@@ -33,7 +29,7 @@
     "gulp-watch": "^5.0.1",
     "gulp-zip": "4.2.0",
     "postcss-combine-duplicated-selectors": "6.0.2",
-    "postcss-custom-properties": "7.0.0",
+    "postcss-custom-properties": "8.0.0",
     "run-sequence": "2.2.1",
     "xo": "^0.23.0"
   },
@@ -47,5 +43,8 @@
         "as-needed"
       ]
     }
+  },
+  "dependencies": {
+    "exstatic": "github:hexrweb/exstatic"
   }
 }
