--- a/data/plugins.yaml
+++ b/data/plugins.yaml
@@ -5,3 +5,4 @@
  - '{cwd}/.build-tools/exstatic-plugins/filter'
  - '{cwd}/.build-tools/exstatic-plugins/hero'
  - '{cwd}/.build-tools/exstatic-plugins/buildtime'
+ - '{cwd}/.build-tools/exstatic-plugins/icon'
