--- a/data/plugins.yaml
+++ b/data/plugins.yaml
@@ -7,3 +7,4 @@
  - '{cwd}/.build-tools/exstatic-plugins/buildtime'
  - '{cwd}/.build-tools/exstatic-plugins/icon'
  - '{cwd}/.build-tools/exstatic-plugins/link-helpers'
+ - '{cwd}/.build-tools/exstatic-plugins/visual-helpers'
